# sandbox-git-worktree

./: .gitignore  CLAUDE.md  README.md
apps/api-ad-generator/: .coverage  .env  .env.example  .gitignore  README.md  pyproject.toml
apps/api-ad-generator/app/: dependencies.py  main.py
apps/api-ad-generator/app/application/usecases/: __init__.py  generate_ad_copy_usecase.py
apps/api-ad-generator/app/domain/: exceptions.py
apps/api-ad-generator/app/domain/entities/: __init__.py  ad_copy.py  ad_input.py  tone.py
apps/api-ad-generator/app/domain/repositories/: __init__.py  ad_generation_repository.py
apps/api-ad-generator/app/infrastructure/api/: models.py  routes.py
apps/api-ad-generator/app/infrastructure/clients/: __init__.py  claude_client.py
apps/api-ad-generator/app/infrastructure/config/: __init__.py  settings.py
apps/api-ad-generator/tests/integration/: test_api.py
apps/api-ad-generator/tests/unit/: test_domain_entities.py  test_usecase.py
apps/web-console/: .env.local.example  .gitignore  README.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web-console/__tests__/components/: ad-generation-form.test.tsx
apps/web-console/components/common/: error-display.tsx
apps/web-console/lib/: api.ts  hooks.ts
apps/web-console/src/: App.tsx
apps/web-console/styles/: globals.css
apps/web-console/tests/: basic-flow.spec.ts
apps/web-console/types/: api.ts  index.ts
docs/: openapi.yaml
(+2 files in other folders)
